Fix layout issues with entry modals

--- a/src/react-components/layout/RoomLayout.scss
+++ b/src/react-components/layout/RoomLayout.scss
@@ -42,6 +42,13 @@
 :local(.viewport) {
   position: relative;
   grid-row-start: viewport;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & > * {
+    pointer-events: auto;
+  }
 }
 
 :local(.toolbar) {
